--- a/SchedulingTest1/config5.yaml
+++ b/SchedulingTest1/config5.yaml
@@ -1,31 +1,33 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: deployment-1  # name of deployment
+  name: deployment-v1.1
 spec:
-  replicas: 4
+  replicas: 12
   selector:
     matchLabels:
-      app: nginx  # pod label
+      app: rts-service
   template:
     metadata:
       labels:
-        app: nginx  # pod label
+        app: rts-service
     spec:
       topologySpreadConstraints:
       - maxSkew: 1
-        topologyKey: node
+        topologyKey: zone # evenly distribution wrt zones
         whenUnsatisfiable: DoNotSchedule
-
+      - maxSkew: 1
+        topologyKey: node # evenly distribution wrt nodes 
+        whenUnsatisfiable: DoNotSchedule
       containers:
       - name: nginx-container
         image: nginx:latest
         resources:
-          limits:
-            memory: "128Mi"
-            cpu: "6000m"
           requests:
             memory: "64Mi"
-            cpu: "6000m"
+            cpu: "250m"
+          limits:
+            memory: "128Mi"
+            cpu: "500m"
         ports:
         - containerPort: 80
